<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtApto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text=""
        android:gravity="center"
        style="@style/Body4"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtContrato"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/title_cliente_contratos"
        android:gravity="center"
        style="@style/Body4"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtReceber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/title_cliente_a_receber"
        android:gravity="center"
        style="@style/Body4"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtRecebido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/title_cliente_recebido"
        android:gravity="center"
        style="@style/Body4"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtPercentRecebido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/title_cliente_percentual"
        android:gravity="center"
        style="@style/Body4"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtSituacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/title_cliente_situacao"
        android:gravity="center"
        style="@style/Body4"
        />

</LinearLayout>